[package]
name = "sms"
version = "0.1.2"
authors = ["EchoLi <Echo_AI@foxmail.com>"]
edition = "2018"
description = "SMS sdk"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
form_urlencoded = "1"
ring = "0.16"
base64 = "0.13"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
