[package]
name = "sms"
version = "0.1.6"
authors = ["EchoLi <Echo_AI@foxmail.com>"]
edition = "2018"
description = "Rust sms sdk"
license = "MIT"
repository = "https://github.com/EchoRust/SMS"
keywords = ["sms", "aliyun"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chrono = "0.4"
rand = "0.8"
ring = "0.16"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
